cmake_minimum_required ( VERSION 3.5 )
project(hdf5_issues)
set (CMAKE_CXX_STANDARD 11)
find_package(HDF5 REQUIRED COMPONENTS C CXX)
find_package (PythonInterp REQUIRED)
if(${PYTHON_VERSION_MAJOR} STRLESS "3") 
	message(FATAL_ERROR "Requires Python3 interpreter as python executable. Found ${PYTHON_EXECUTABLE} to be ${PYTHON_VERSION_STRING}")
endif(${PYTHON_VERSION_MAJOR} STRLESS "3")
add_executable(hdf5_issues main.cpp)
include_directories(${HDF5_INCLUDE_DIRS})
set(_hdf5_libs hdf5 hdf5_cpp)
target_link_libraries(hdf5_issues ${HDF5_LIBRARIES})
execute_process(COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_SOURCE_DIR}/make_file.py ${CMAKE_BINARY_DIR})
